--- a/components/riff/riff.module.css
+++ b/components/riff/riff.module.css
@@ -14,17 +14,16 @@
 
 .fret {
   text-align: center;
+  width: 100%;
+  height: 100%;
+  line-height: 3rem;
 }
 
-.fret.empty {
-  background: #ccc;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 1rem;
-  margin: auto;
-}
-
-.number {
+.fret .number {
   background: #FFF;
   padding: 0.5rem;
+}
+
+.fret.empty .number {
+  background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
 }
