--- a/components/riff/riff.module.css
+++ b/components/riff/riff.module.css
@@ -12,7 +12,7 @@
   grid-auto-flow: column;
   grid-auto-columns: var(--spacing);
   align-items: center;
-  background: linear-gradient(0deg, #FFF 49%, #000 50%, #FFF 51%);
+  background: linear-gradient(0deg, #FFF 48%, #000 50%, #FFF 51%);
 }
 
 .fret {
@@ -24,10 +24,13 @@
 }
 
 .fret .number {
-  background: #FFF;
   padding: 0.5rem;
+  }
+  
+  .fret .number:not(.empty) {
+  background: #FFF;
 }
 
-.fret.empty .number {
+.edit .fret .number.empty {
   background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
 }
