--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,17 @@ a {
   box-sizing: border-box;
 }
 
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0 0.5rem;
+}
+
+button:hover {
+  opacity: 0.6;
+}
 /*
 @media (prefers-color-scheme: dark) {
   html {
