--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,15 @@ button {
 button:hover {
   opacity: 0.6;
 }
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 /*
 @media (prefers-color-scheme: dark) {
   html {
