--- a/components/riff/riff.module.scss
+++ b/components/riff/riff.module.scss
@@ -1,6 +1,11 @@
+@use "@/scss/common.scss";
+
 .container {
-  overflow-x: scroll;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
+
 .riff {
   display: grid;
   grid-auto-flow: row;
@@ -36,9 +41,11 @@
 }
 
 .editControls {
+  --minPref: 500px;
+  @extend %constrained;
   display: grid;
   grid-template-areas: 'history fret general';
-  grid-template-columns: 10rem auto 10rem;
+  grid-template-columns: 7rem auto 7rem;
   grid-template-rows: 4rem;
   justify-items: center;
   align-items: center;
@@ -46,6 +53,7 @@
 
 @media (max-width: 500px) {
   .editControls {
+    --minPref: 300px;
     grid-template-areas: 'fret fret' 'history general';
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
