--- a/components/riff/riff.module.scss
+++ b/components/riff/riff.module.scss
@@ -26,18 +26,19 @@
   width: 100%;
   height: 100%;
   line-height: 3rem;
-}
 
-.fret .number {
-  padding: 0.5rem;
+  .number {
+    padding: 0.5rem;
+    &:not(.empty) {
+      background: #FFF;
+    }
   }
-
-  .fret .number:not(.empty) {
-  background: #FFF;
 }
 
-.edit .fret .number.empty {
-  background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
+.edit {
+  .fret .number.empty {
+    background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
+  }
 }
 
 .editControls {
@@ -77,11 +78,11 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-}
 
-.fretInput input {
-  margin: auto;
-  border: none;
-  font-size: 2.5rem;
-  text-align: center;
+  input {
+    margin: auto;
+    border: none;
+    font-size: 2.5rem;
+    text-align: center;
+  }
 }
