--- a/components/riff/riff.module.scss
+++ b/components/riff/riff.module.scss
@@ -10,6 +10,7 @@
   display: grid;
   grid-auto-flow: row;
   grid-auto-rows: calc(var(--spacing) * 0.6);
+  user-select: none;
 }
 
 .string {
@@ -36,7 +37,21 @@
 }
 
 .edit {
-  .fret .number.empty {
-    background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
+  .fret {
+    @media (hover: hover) {
+      cursor: pointer;
+    }
+  }
+  .number{
+    &.selected {
+      position: relative;
+      background: #ffcf76;
+      border-radius: 2rem;
+      display: inline-block;
+      padding: 0 1rem;
+    }
+    &.empty {
+      background: radial-gradient(circle, #CCC 0.5rem, #FFF0 0.5rem);
+    }
   }
 }
